feat: handle None

--- a/blackify_dict_list.ipynb
+++ b/blackify_dict_list.ipynb
@@ -46,7 +46,7 @@
             "    \"1\": 1,\n",
             "    \"2\": {\n",
             "        \"23\": 2,\n",
-            "        \"0\": 4,\n",
+            "        \"0\": None,\n",
             "    },\n",
             "    \"list_data\": [\n",
             "        \"1\",\n",
@@ -76,6 +76,7 @@
         "\n",
         "def add_trailing_comma_in_dict_list(data) -> str:\n",
         "    result = json.dumps(data, indent=4)\n",
+        "    result = result.replace("null", "None")\n",
         "    result = _add_trailing_comma_in_dict_list(result, \"}\")\n",
         "    return _add_trailing_comma_in_dict_list(result, \"]\")\n",
         "\n",
@@ -83,7 +84,7 @@
         "  \"1\":1,\n",
         "  \"2\": {\n",
         "    \"23\": 2,\n",
-        "    \"0\": 4\n",
+        "    \"0\": None\n",
         "  },\n",
         "  \"list_data\":[\n",
         "      \"1\", \"2\", \"3\", \"4\", \"5\"\n",
