--- a/blackify_dict_list.ipynb
+++ b/blackify_dict_list.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWYd7ZwTBI1dyt0wO7chx7",
+      "authorship_tag": "ABX9TyOTlHl/KGQ+Vq4eRPCNRFG/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "77nldjJ9SByu",
-        "outputId": "e67734d5-cf7c-4f51-8f3a-419d021402cb"
+        "outputId": "cbeaa207-07da-4345-a803-c17263a0a49f"
       },
       "outputs": [
         {
@@ -76,7 +76,7 @@
         "\n",
         "def add_trailing_comma_in_dict_list(data) -> str:\n",
         "    result = json.dumps(data, indent=4)\n",
-        "    result = result.replace("null", "None")\n",
+        "    result = result.replace(\"null\", \"None\")\n",
         "    result = _add_trailing_comma_in_dict_list(result, \"}\")\n",
         "    return _add_trailing_comma_in_dict_list(result, \"]\")\n",
         "\n",
